# diplom

./: .env.example  .gitignore  README.md  agents.md  alembic.ini  docker-compose.yml  progress.md  pyproject.toml  use-case.md
.github/workflows/: ci.yml  deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 20260330_0001_initial_access_models.py  (+11 more)
backend/app/: celery_app.py  main.py  worker.py
backend/scripts/: export_openapi.py  loadtest_orders_ws.py  prepare_notification_recipient.py  seed_admin.py  seed_demo.py  trigger_live_low_stock.py  verify_access_models.py  verify_ai_analytics_block.py  verify_ai_provider.py  verify_analytics.py  verify_audit.py  verify_demo_seed.py  verify_dish_channels.py  verify_franchisee_notifications.py  verify_low_stock.py  verify_notification_preferences.py  verify_orders.py  verify_rbac.py  verify_security.py  verify_task020.py  verify_telegram_link.py  verify_warehouse.py  verify_weekly_revenue_report.py  verify_writeoff.py
backend/tests/: test_documents_rbac.py  test_documents_storage.py  test_documents_validation.py  test_kanban_boards.py  test_kanban_cards.py  test_kanban_extras.py  test_kanban_notifications.py  test_kanban_service.py
deploy/: deploy_vps.sh  docker-compose.vps.yml
docs/: architecture.md  load-testing.md  openapi.json
docs/demo/: checklist.md  current-check-scenarios.md  fallback-script.md  presentation-script.md  use-cases.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
nginx/: default.conf  production.conf.template
(+108 files in other folders)
